--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: "LocalData Lab"
-title: "🚀 Local Data Lab"
+title: "Local Data Lab"
 description: "Seminario de periodismo de datos en el ámbito local."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
