--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ authors:
     name: felix
     display_name: Félix Arias
     web: https://localdatalab.umh.es/
-    pic: https://pbs.twimg.com/profile_images/1148613603899187201/Tjgk-soc_400x400.jpg
+    pic: /assets/images/team/felix.jpg
     twitter: https://twitter.com/flxarias
     description: "Director del LocalDataLab."
   veronica:
