--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
     name: pedro
     display_name: Pedro Miguel González
     web: https://localdatalab.umh.es/
-    pic: /assets/images/pedro.jpg
+    pic: /assets/images/pedro.jpeg
     twitter: https://petertecnologia.medium.com/
     description: "Redacción del LocalDataLab."
   irene:
